--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,12 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + NextUI</title>
+    <title>Pretuber</title>
     <meta key="title" content="Vite + NextUI" property="og:title" />
-    <meta content="Make beautiful websites regardless of your design experience." property="og:description" />
-    <meta content="Make beautiful websites regardless of your design experience." name="description" />
+    <meta
+      content="Make beautiful websites regardless of your design experience."
+      property="og:description"
+    />
+    <meta
+      content="Make beautiful websites regardless of your design experience."
+      name="description"
+    />
     <meta
       key="viewport"
       content="viewport-fit=cover, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
